DigicielFull/force-app/main/default/objects/TIMBASURVEYS__AnswerOption__c/TIMBASURVEYS__AnswerOption__c.object-meta.xml
<CustomObject>
    <label>AnswerOption</label>
    <nameField>
        <label>AnswerOption Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AnswerOptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>