DigicielFull/force-app/main/default/objects/TIMBASURVEYS__AnswerOption__c/fields/TIMBASURVEYS__IsPicklistValue__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__IsPicklistValue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPicklistValue</label>
    <type>Checkbox</type>
</CustomField>