DigicielFull/force-app/main/default/objects/TIMBASURVEYS__AnswerOption__c/fields/TIMBASURVEYS__numericRange__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__numericRange__c</fullName>
    <label>numericRange</label>
    <length>10</length>
    <type>Text</type>
</CustomField>