DigicielFull/force-app/main/default/objects/TIMBASURVEYS__AnswerOption__c/fields/TIMBASURVEYS__Picklist__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__Picklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Picklist</label>
    <referenceTo>TIMBASURVEYS__Picklist__c</referenceTo>
    <relationshipLabel>AnswerOptions</relationshipLabel>
    <relationshipName>AnswerOptions</relationshipName>
    <type>Lookup</type>
</CustomField>