DigicielFull/force-app/main/default/objects/TIMBASURVEYS__AnswerOption__c/fields/TIMBASURVEYS__ResponseType__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__ResponseType__c</fullName>
    <label>ResponseType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>String</fullName>
            </value>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>DateTime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>