DigicielFull/force-app/main/default/objects/TIMBASURVEYS__AnswerOption__c/fields/TIMBASURVEYS__Weight__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__Weight__c</fullName>
    <label>Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>