DigicielFull/force-app/main/default/objects/TIMBASURVEYS__AnswerOption__c/fields/TIMBASURVEYS__x__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__x__c</fullName>
    <label>x</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>