DigicielFull/force-app/main/default/objects/TIMBASURVEYS__AnswerOption__c/fields/TIMBASURVEYS__y__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__y__c</fullName>
    <label>y</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>